# publitool

./: .gitignore
backend/: docker-compose.yaml  prestart.sh  pyproject.toml
backend/alembic/versions/: 860c68e3dff9_create_account_table.py
backend/app/: backend_pre_start.py  main.py
backend/app/api/: deps.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: auth.py  image.py  post.py  user.py
backend/app/core/: config.py
backend/app/crud/: __init__.py  crud_image.py  crud_post.py  crud_user.py
backend/app/db/: init_db.py  session.py
backend/app/models/: image.py  post.py  user.py
backend/app/schemas/: __init__.py  image.py  post.py  post_image.py  user.py
frontend/src/: App.js  client.js  config.js
frontend/src/components/Button/: Button.jsx
frontend/src/components/Footer/: index.jsx
frontend/src/components/FormInput/: FormInput.jsx
frontend/src/components/SubmitForm/: Index.jsx
frontend/src/pages/error-page/: index.jsx
frontend/src/pages/home/: index.jsx
frontend/src/pages/login/: index.jsx
frontend/src/pages/sign-up/: index.jsx
