[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["marccgrau <46031196+marccgrau@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
duckdb = "^0.7.1"
sqlalchemy = "^2.0.8"
python-multipart = "^0.0.6"
uvicorn = "^0.21.1"
passlib = "^1.7.4"
alembic = "^1.10.2"
pydantic = {extras = ["email"], version = "^1.10.7"}
tenacity = "^8.2.2"
mako = "^1.2.4"
python-jose = "^3.3.0"
pytest = "^7.2.2"
sqlalchemy-imageattach = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
